--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fast-react-pizza",
+	"name": "fast-pizza-co",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -28,3 +28,4 @@
 		"vite-plugin-eslint": "^1.8.1"
 	}
 }
+
